An Haufen fenster erstellt.. Kunden können inzwischen erstellt werden und geändert werden

--- a/BankClient/BankClient/MainWindow.xaml
+++ b/BankClient/BankClient/MainWindow.xaml
@@ -7,9 +7,10 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Button x:Name="reg" Click="register" Content="Registrieren Sie Sich!" HorizontalAlignment="Left" Margin="38,132,0,0" VerticalAlignment="Top" Width="150" Height="50"/>
-        <Button x:Name="logon" Click="login" Content="Log In" Margin="331,132,38,0" VerticalAlignment="Top" Height="50"/>
+        <Button x:Name="reg" Click="register" Content="Neu bei uns?" HorizontalAlignment="Left" Margin="38,132,0,0" VerticalAlignment="Top" Width="150" Height="50"/>
+        <Button x:Name="logon" Click="login" Content="Hier Einloggen!" Margin="331,132,38,0" VerticalAlignment="Top" Height="50"/>
         <Label x:Name="label" Content="Willkommen beim Bank Client" Height="43" Margin="130,27,130,0" VerticalAlignment="Top" FontSize="18"/>
+        <Button x:Name="logon_Copy" Click="Beenden" Content="Beenden" Margin="331,246,38.4,0" VerticalAlignment="Top" Height="50"/>
 
     </Grid>
 </Window>
