--- a/BankClient/BankClient/Login.xaml
+++ b/BankClient/BankClient/Login.xaml
@@ -5,8 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankClient"
         mc:Ignorable="d"
-        Title="Login" Height="300" Width="300">
+        Title="Login" Height="400" Width="400">
+
     <Grid>
-        
+        <Button x:Name="button" Content="Zurück" Click="zurück" HorizontalAlignment="Left" Margin="230,325,0,0" VerticalAlignment="Top" Height="37" Width="119"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="10,0,0,329" TextWrapping="Wrap" Text="Geben Sie bitte Ihren Vornamen ein: " VerticalAlignment="Bottom"/>
+        <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="9,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Geben Sie bitte Ihren "/><Run Text="Nach"/><Run Text="namen ein: "/></TextBlock>
+        <TextBlock x:Name="textBlock_Copy1" HorizontalAlignment="Left" Margin="9,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="217"><Run Text="Geben Sie bitte Ihr"/><Run Text=" Geburtsdatum"/><Run Text=" "/><Run Text="ein: "/></TextBlock>
+        <Button x:Name="button_Copy" Content="Einloggen" Click="einloggen" HorizontalAlignment="Left" Margin="42,325,0,0" VerticalAlignment="Top" Height="37" Width="119"/>
+        <TextBox x:Name="Vorname" HorizontalAlignment="Left" Height="23" Margin="9,48,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="Nachname" HorizontalAlignment="Left" Height="23" Margin="9,97,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="Geburtsdatum" HorizontalAlignment="Left" Height="23" Margin="9,146,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+
     </Grid>
 </Window>
