--- a/BankClient/BankClient/Kontofunktionen/Bankstatement.xaml
+++ b/BankClient/BankClient/Kontofunktionen/Bankstatement.xaml
@@ -9,6 +9,7 @@
     <Grid>
         <Button x:Name="Log_out" Content="Logout" Click="Logout" HorizontalAlignment="Left" Margin="309,10,0,0" VerticalAlignment="Top" Width="75"/>
         <Button x:Name="Back" Content="Zurück" Click="Zurück" HorizontalAlignment="Left" Margin="309,340,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="button" Content="Kontoauszug ausgeben" Click="auszug" HorizontalAlignment="Left" Margin="47,125,0,0" VerticalAlignment="Top" Width="306" Height="83"/>
 
     </Grid>
 </Window>
