--- a/BankClient/BankClient/Kundendatenaenderung.xaml
+++ b/BankClient/BankClient/Kundendatenaenderung.xaml
@@ -12,14 +12,16 @@
         <Button x:Name="Aenderung" Content="Daten ändern" Click="aendern" HorizontalAlignment="Left" Margin="10,321,0,0" VerticalAlignment="Top" Width="89" Height="41"/>
         <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="10,0,0,346" TextWrapping="Wrap" Text="Geben Sie bitte Ihren Vornamen ein: " VerticalAlignment="Bottom"/>
         <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="10,59,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Geben Sie bitte Ihren "/><Run Text="Nach"/><Run Text="namen ein: "/></TextBlock>
-        <TextBlock x:Name="textBlock_Copy2" HorizontalAlignment="Left" Margin="10,108,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Geben Sie bitte Ihre "/><Run Text="Adresse "/><Run Text="ein: "/></TextBlock>
-        <TextBlock x:Name="textBlock_Copy3" HorizontalAlignment="Left" Margin="10,157,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Geben Sie bitte Ihren "/><Run Text="Wohnort "/><Run Text="ein: "/></TextBlock>
+        <TextBlock x:Name="textBlock_Copy2" HorizontalAlignment="Left" Margin="10,108,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Geben Sie bitte Ihre Adresse und Hausnummer ein:"/></TextBlock>
+        <TextBlock x:Name="textBlock_Copy3" HorizontalAlignment="Left" Margin="10,157,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Geben Sie bitte Ihre Postleitzahl und Ihren Wohnort ein:"/></TextBlock>
         <TextBlock x:Name="textBlock_Copy4" HorizontalAlignment="Left" Margin="10,206,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Geben Sie bitte "/><Run Text="Ihre Telefonnumer "/><Run Text="ein: "/></TextBlock>
-        <TextBox x:Name="Vorname" HorizontalAlignment="Left" Height="23" Margin="10,31,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="Nachname" HorizontalAlignment="Left" Height="23" Margin="10,80,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="Adresse" HorizontalAlignment="Left" Height="23" Margin="10,129,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="Wohnort" HorizontalAlignment="Left" Height="23" Margin="10,178,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="Telefonnummer" HorizontalAlignment="Left" Height="23" Margin="10,227,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="Vorname" HorizontalAlignment="Left" Height="23" Margin="9,38,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="188"/>
+        <TextBox x:Name="Nachname" HorizontalAlignment="Left" Height="23" Margin="10,87,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="187"/>
+        <TextBox x:Name="Adresse" HorizontalAlignment="Left" Height="23" Margin="10,130,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="187"/>
+        <TextBox x:Name="Wohnort" HorizontalAlignment="Left" Height="23" Margin="101,178,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="153"/>
+        <TextBox x:Name="Telefonnummer" HorizontalAlignment="Left" Height="23" Margin="9,227,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="187"/>
+        <TextBox x:Name="Hausnummer" HorizontalAlignment="Left" Height="23" Margin="212,130,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="42"/>
+        <TextBox x:Name="Postleitzahl" HorizontalAlignment="Left" Height="23" Margin="10,178,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="71"/>
 
     </Grid>
 </Window>
