--- a/BankClient/BankClient/CreditAccActions.xaml
+++ b/BankClient/BankClient/CreditAccActions.xaml
@@ -13,6 +13,7 @@
         <Button x:Name="button_Copy" Content="Abheben" HorizontalAlignment="Left" Margin="28,115,0,0" VerticalAlignment="Top" Width="164" Height="58" Click="Withdraw"/>
         <Button x:Name="button_Copy1" Content="Einzahlen" HorizontalAlignment="Left" Margin="28,202,0,0" VerticalAlignment="Top" Width="164" Height="58" Click="Deposit"/>
         <Button x:Name="button_Copy2" Content="Kontoauszug" HorizontalAlignment="Left" Margin="28,289,0,0" VerticalAlignment="Top" Width="164" Height="58" Click="Statement"/>
+        <Button x:Name="button1" Content="Konto löschen" Click="loeschen" HorizontalAlignment="Left" Margin="272,217,0,0" VerticalAlignment="Top" Width="110" Height="48"/>
 
     </Grid>
 </Window>
