--- a/BankClient/BankClient/Kontofunktionen/Withdraw.xaml
+++ b/BankClient/BankClient/Kontofunktionen/Withdraw.xaml
@@ -10,8 +10,9 @@
         <Button x:Name="Log_out" Content="Logout" Click="Logout" HorizontalAlignment="Left" Margin="309,10,0,0" VerticalAlignment="Top" Width="75"/>
         <Button x:Name="Back" Content="Zurück" Click="Zurück" HorizontalAlignment="Left" Margin="309,340,0,0" VerticalAlignment="Top" Width="75"/>
         <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="10,54,0,0" TextWrapping="Wrap" Text="Geben Sie bitte einen Betrag ein, welcher abgebucht werden soll:" VerticalAlignment="Top" Height="21" Width="372"/>
-        <TextBox x:Name="Betrag" HorizontalAlignment="Left" Height="23" Margin="10,80,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="Betrag" HorizontalAlignment="Left" Height="23" Margin="10,80,0,0" TextWrapping="Wrap" Text="0,00" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="button" Content="Abbuchen" HorizontalAlignment="Left" Margin="10,289,0,0" VerticalAlignment="Top" Width="141" Height="56" Click="abbuchen"/>
+        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="135,80,0,0" TextWrapping="Wrap" Text="in €" VerticalAlignment="Top" Height="23" RenderTransformOrigin="0.809,0.806"/>
 
     </Grid>
 </Window>
