--- a/BankClient/BankClient/DepositAccActions.xaml
+++ b/BankClient/BankClient/DepositAccActions.xaml
@@ -5,18 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankClient"
         mc:Ignorable="d"
-        Title="DepositAccActions" Height="400" Width="400">
+        Title="DepositAccActions" Height="400" Width="400" WindowStartupLocation = "CenterScreen">
     <Grid>
         <Button x:Name="Log_out" Content="Logout" Click="Logout" HorizontalAlignment="Left" Margin="309,10,-90.4,0" VerticalAlignment="Top" Width="75"/>
         <Button x:Name="Back" Content="Zurück" Click="Zurück" HorizontalAlignment="Left" Margin="309,340,-90.4,-89.6" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="button_Copy" Content="Einzahlen" HorizontalAlignment="Left" Margin="28,115,0,0" VerticalAlignment="Top" Width="164" Height="58" Click="Deposit"/>
-        <Button x:Name="button_Copy1" Content="Kontoauszug" HorizontalAlignment="Left" Margin="28,202,0,0" VerticalAlignment="Top" Width="164" Height="58" Click="Statement"/>
+        <Button x:Name="button_Copy" Content="Einzahlen" HorizontalAlignment="Left" Margin="27,166,0,0" VerticalAlignment="Top" Width="164" Height="58" Click="Deposit"/>
+        <Button x:Name="button_Copy1" Content="Kontoauszug" HorizontalAlignment="Left" Margin="27,253,0,0" VerticalAlignment="Top" Width="164" Height="58" Click="Statement"/>
         <Button x:Name="button1" Content="Konto löschen" Click="loeschen" HorizontalAlignment="Left" Margin="272,217,0,0" VerticalAlignment="Top" Width="110" Height="48"/>
         <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="233,54,0,0" TextWrapping="Wrap" Text="Aktueller Kontostand:" VerticalAlignment="Top" Height="22" Width="149"/>
         <TextBlock x:Name="Kontostandy" HorizontalAlignment="Left" Margin="233,81,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="22" Width="56"/>
         <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="309,81,0,0" TextWrapping="Wrap" Text="in €" VerticalAlignment="Top" Height="22" Width="37"/>
         <Button x:Name="button2" Content="Add User" Click="add_user" HorizontalAlignment="Left" Margin="332,167,0,0" VerticalAlignment="Top" Width="52" Height="45"/>
         <Button x:Name="button2_Copy" Content="delete User" Click="delete_user" HorizontalAlignment="Left" Margin="272,167,0,0" VerticalAlignment="Top" Width="52" Height="45"/>
+        <Button x:Name="button_Copy2" Content="Eigenübertrag" HorizontalAlignment="Left" Margin="27,84,0,0" VerticalAlignment="Top" Width="164" Height="58" Click="eingenuebertrag"/>
 
     </Grid>
 </Window>
