--- a/BankClient/BankClient/Register.xaml
+++ b/BankClient/BankClient/Register.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankClient"
         mc:Ignorable="d"
-        Title="Register" Height="400" Width="400">
+        Title="Register" Height="400" Width="400" WindowStartupLocation = "CenterScreen">
     <Grid>
         <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="9,0,0,339" TextWrapping="Wrap" Text="Geben Sie bitte Ihren Vornamen ein: " VerticalAlignment="Bottom"/>
         <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="10,66,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Geben Sie bitte Ihren "/><Run Text="Nach"/><Run Text="namen ein: "/></TextBlock>
