--- a/BankClient/BankClient/Startseite.xaml
+++ b/BankClient/BankClient/Startseite.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankClient"
         mc:Ignorable="d"
-        Title="Startseite" Height="400" Width="400">
+        Title="Startseite" Height="400" Width="400" WindowStartupLocation = "CenterScreen">
     <Grid>
+        
         <Button x:Name="button" Content="Logout" Click="Logout" HorizontalAlignment="Left" Margin="309,10,0,0" VerticalAlignment="Top" Width="75"/>
         <Button x:Name="Kundendaten" Content="Kundendatenverwaltung" Click="Kundendatenaenderung" HorizontalAlignment="Left" Margin="128,73,0,0" VerticalAlignment="Top" Width="142" Height="43"/>
         <Button x:Name="Konto" Content="Kontoverwaltung" Click="Kontoverwaltung" HorizontalAlignment="Left" Margin="128,211,0,0" VerticalAlignment="Top" Width="142" Height="43"/>
