--- a/BankClient/BankClient/deleteUser.xaml
+++ b/BankClient/BankClient/deleteUser.xaml
@@ -10,6 +10,7 @@
         <Button x:Name="Log_out" Content="Logout" Click="Logout" HorizontalAlignment="Left" Margin="309,10,-92,0" VerticalAlignment="Top" Width="75"/>
         <Button x:Name="Back" Content="Zurück" Click="Zurück" HorizontalAlignment="Left" Margin="309,340,-92,-91" VerticalAlignment="Top" Width="75"/>
         <ListBox x:Name="listBox" Height="122" Margin="42,120,42,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="42,99,0,0" TextWrapping="Wrap" Text="Hier sind alle zusätzlichen Kontoverfüger gelistet:" VerticalAlignment="Top" Height="16" Width="310"/>
 
     </Grid>
 </Window>
